--- a/live.html
+++ b/live.html
@@ -32,10 +32,10 @@
       <div class="contact">
         <div class="socialMedia">
           <p>Follow us</p>
-          <img src="./linkedin icon.svg" alt="" />
-          <img src="./Group-1.svg" alt="" />
-          <img src="./Group-2.svg" alt="" />
-          <img src="./Group.svg" alt="" />
+          <img src="linkedin icon.svg" alt="" />
+          <img src="Group-1.svg" alt="" />
+          <img src="Group-2.svg" alt="" />
+          <img src="Group.svg" alt="" />
         </div>
         <div class="callUs">Call us: <span>+234 70 433 2832</span></div>
       </div>
@@ -46,7 +46,7 @@
         <div class="row">
           <div class="column left">
             <h3>Live</h3>
-            <video src="./100.mp4" controls></video>
+            <video src="100.mp4" controls></video>
             <div class="lieViews">
                 <div class="text">Live</div>
                 <i class="fas fa-eye"></i>
@@ -67,7 +67,7 @@
             <div class="previousSundays">
               <div class="row">
                 <div class="column first">
-                  <video src="./100.mp4"></video>
+                  <video src="100.mp4"></video>
                 </div>
                 <div class="column second">
                   <div class="title">Healing Sunday</div>
@@ -77,7 +77,7 @@
               </div>
               <div class="row">
                 <div class="column first">
-                  <video src="./100.mp4"></video>
+                  <video src="100.mp4"></video>
                 </div>
                 <div class="column second">
                   <div class="title">Healing Sunday</div>
@@ -87,7 +87,7 @@
               </div>
               <div class="row">
                 <div class="column first">
-                  <video src="./100.mp4"></video>
+                  <video src="100.mp4"></video>
                 </div>
                 <div class="column second">
                   <div class="title">Healing Sunday</div>
@@ -118,7 +118,7 @@
           <div class="column one">
             <div class="row">
               <div class="vid">
-                <video src="./100.mp4"></video>
+                <video src="100.mp4"></video>
               </div>
               <div class="column">
                 <div class="title">Healing Sunday</div>
@@ -131,7 +131,7 @@
           <div class="column one">
             <div class="row">
               <div class="vid">
-                <video src="./100.mp4"></video>
+                <video src="100.mp4"></video>
               </div>
               <div class="column">
                 <div class="title">Healing Sunday</div>
@@ -144,7 +144,7 @@
           <div class="column one">
             <div class="row">
               <div class="vid">
-                <video src="./100.mp4"></video>
+                <video src="100.mp4"></video>
               </div>
               <div class="column">
                 <div class="title">Healing Sunday</div>
@@ -157,7 +157,7 @@
           <div class="column one">
             <div class="row">
               <div class="vid">
-                <video src="./100.mp4"></video>
+                <video src="100.mp4"></video>
               </div>
               <div class="column">
                 <div class="title">Healing Sunday</div>
