--- a/shop.html
+++ b/shop.html
@@ -55,7 +55,7 @@
           <h3>TOP PRODUCTS</h3>
 
           <div class="topProduct">
-            <img src="./product-4-600x772.png" alt="" />
+            <img src="product-4-600x772.png" alt="" />
             <div class="aboutTopProduct">
               <div class="name">We Build Hope</div>
               <div class="price">Price <span>N150</span></div>
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="topProduct">
-            <img src="./product-4-600x772.png" alt="" />
+            <img src="product-4-600x772.png" alt="" />
             <div class="aboutTopProduct">
               <div class="name">We Build Hope</div>
               <div class="price">Price <span>N150</span></div>
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div class="topProduct">
-            <img src="./product-4-600x772.png" alt="" />
+            <img src="product-4-600x772.png" alt="" />
             <div class="aboutTopProduct">
               <div class="name">We Build Hope</div>
               <div class="price">Price <span>N150</span></div>
@@ -87,7 +87,7 @@
           <div class="products">
             <a href="product.html">
               <div class="product" >
-                  <img src="./product-5-600x772.png" alt="">
+                  <img src="product-5-600x772.png" alt="">
                   <button class="button">Add to Cart</button>
                   <h4>LISTEN BELIEVE</h4>
                   <div class="price">Price <span>N150</span></div>
@@ -95,7 +95,7 @@
             </a>
             <a href="product.html">
               <div class="product" >
-                  <img src="./product-5-600x772.png" alt="">
+                  <img src="product-5-600x772.png" alt="">
                   <button class="button">Add to Cart</button>
                   <h4>LISTEN BELIEVE</h4>
                   <div class="price">Price <span>N150</span></div>
@@ -103,7 +103,7 @@
             </a>
             <a href="product.html">
               <div class="product" >
-                  <img src="./product-5-600x772.png" alt="">
+                  <img src="product-5-600x772.png" alt="">
                   <button class="button">Add to Cart</button>
                   <h4>LISTEN BELIEVE</h4>
                   <div class="price">Price <span>N150</span></div>
@@ -111,7 +111,7 @@
             </a>
             <a href="product.html">
               <div class="product" >
-                  <img src="./product-5-600x772.png" alt="">
+                  <img src="product-5-600x772.png" alt="">
                   <button class="button">Add to Cart</button>
                   <h4>LISTEN BELIEVE</h4>
                   <div class="price">Price <span>N150</span></div>
@@ -119,7 +119,7 @@
             </a>
             <a href="product.html">
               <div class="product" >
-                  <img src="./product-5-600x772.png" alt="">
+                  <img src="product-5-600x772.png" alt="">
                   <button class="button">Add to Cart</button>
                   <h4>LISTEN BELIEVE</h4>
                   <div class="price">Price <span>N150</span></div>
@@ -127,7 +127,7 @@
             </a>
             <a href="product.html">
               <div class="product" >
-                  <img src="./product-5-600x772.png" alt="">
+                  <img src="product-5-600x772.png" alt="">
                   <button class="button">Add to Cart</button>
                   <h4>LISTEN BELIEVE</h4>
                   <div class="price">Price <span>N150</span></div>
