--- a/product.html
+++ b/product.html
@@ -34,15 +34,15 @@
         <div class="column first">
           <img
             style="margin-bottom: 10px"
-            src="./product-6-768x988.png"
+            src="product-6-768x988.png"
             alt=""
           />
           <img
             style="margin-bottom: 20px"
-            src="./product-5-600x772.png"
+            src="product-5-600x772.png"
             alt=""
           />
-          <img src="./product-4-600x772.png" alt="" />
+          <img src="product-4-600x772.png" alt="" />
         </div>
         <div class="column second">
           <img src="product-4-600x772.png" alt="" />
@@ -97,25 +97,25 @@
         <div class="relatedProduct">Related Product</div>
         <div class="products">
           <div class="product">
-            <img src="./product-5-600x772.png" alt="" />
+            <img src="product-5-600x772.png" alt="" />
             <button class="button">Add to Cart</button>
             <h4>LISTEN BELIEVE</h4>
             <div class="price">Price <span>N150</span></div>
           </div>
           <div class="product">
-            <img src="./product-5-600x772.png" alt="" />
+            <img src="product-5-600x772.png" alt="" />
             <button class="button">Add to Cart</button>
             <h4>LISTEN BELIEVE</h4>
             <div class="price">Price <span>N150</span></div>
           </div>
           <div class="product">
-            <img src="./product-5-600x772.png" alt="" />
+            <img src="product-5-600x772.png" alt="" />
             <button class="button">Add to Cart</button>
             <h4>LISTEN BELIEVE</h4>
             <div class="price">Price <span>N150</span></div>
           </div>
           <div class="product">
-            <img src="./product-5-600x772.png" alt="" />
+            <img src="product-5-600x772.png" alt="" />
             <button class="button">Add to Cart</button>
             <h4>LISTEN BELIEVE</h4>
             <div class="price">Price <span>N150</span></div>
